Added temperature and pressure sensor packages and handling

--- a/Wayfinder/Wayfinder.ioc
+++ b/Wayfinder/Wayfinder.ioc
@@ -29,16 +29,19 @@ Mcu.Pin10=PA7
 Mcu.Pin11=PB10
 Mcu.Pin12=PB13
 Mcu.Pin13=PB14
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB3
-Mcu.Pin17=PB8
-Mcu.Pin18=PB9
-Mcu.Pin19=VP_RTC_VS_RTC_Activate
+Mcu.Pin14=PC8
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB3
+Mcu.Pin18=PB8
+Mcu.Pin19=PB9
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_RTC_VS_RTC_Calendar
-Mcu.Pin21=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin20=VP_RTC_VS_RTC_Activate
+Mcu.Pin21=VP_RTC_VS_RTC_Calendar
+Mcu.Pin22=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjPressTemp_5.7.0_11.3.0
+Mcu.Pin25=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjTemp_1.5.0_11.3.0
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC3
@@ -46,8 +49,9 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=23
-Mcu.ThirdPartyNb=0
+Mcu.PinsNb=26
+Mcu.ThirdParty0=STMicroelectronics.X-CUBE-MEMS1.11.3.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32L053R8Tx
 MxCube.Version=6.12.1
@@ -116,6 +120,8 @@ PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC3.Mode=TX_Only_Simplex_Unidirect_Master
 PC3.Signal=SPI2_MOSI
+PC8.Locked=true
+PC8.Signal=GPIO_Output
 PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Locked=true
@@ -123,6 +129,7 @@ PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -151,7 +158,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV16
 RCC.AHBFreq_Value=1000000
@@ -200,6 +207,43 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+STMicroelectronics.X-CUBE-MEMS1.11.3.0.BSP.number=3
+STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjPressTempJjLPS22HH=SPI
+STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjPressTemp_Checked=true
+STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjTempJjSTTS22H=I2C
+STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjTemp_Checked=true
+STMicroelectronics.X-CUBE-MEMS1.11.3.0.IPParameters=BoardOoPartJjPressTempJjLPS22HH,BoardOoPartJjTempJjSTTS22H
+STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.STBoard=false
+STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.api=Unknown
+STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.component=
+STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.condition=SEMBoardOoPartJjPressTempJjLPS22HHJjSPI
+STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.instance=PC8
+STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.ip=GPIO
+STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.mode=Output
+STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.name=LPS22HH_CS
+STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.semaphore=
+STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.solution=PC8
+STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.STBoard=false
+STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.api=BSP_BUS_DRIVER
+STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.component=
+STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.condition=SEMBoardOoPartJjTempJjSTTS22HJjI2C
+STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.instance=I2C2
+STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.ip=I2C
+STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.mode=I2C
+STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.name=STTS22H BUS IO driver
+STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.semaphore=
+STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.solution=I2C2
+STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.STBoard=false
+STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.api=BSP_BUS_DRIVER
+STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.component=
+STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.condition=SEMBoardOoPartJjPressTempJjLPS22HHJjSPI
+STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.instance=SPI1
+STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.ip=SPI
+STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.mode=Full-Duplex Master
+STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.name=LPS22HH BUS IO driver
+STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.semaphore=
+STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.solution=SPI1
+STMicroelectronics.X-CUBE-MEMS1.11.3.0_SwParameter=BoardOoPartJjPressTempJjLPS22HH\:SPI;BoardOoPartJjTempJjSTTS22H\:I2C;
 USART2.BaudRate=62500
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
@@ -209,6 +253,10 @@ VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
 VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
+VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjPressTemp_5.7.0_11.3.0.Mode=BoardOoPartJjPressTemp
+VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjPressTemp_5.7.0_11.3.0.Signal=STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjPressTemp_5.7.0_11.3.0
+VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjTemp_1.5.0_11.3.0.Mode=BoardOoPartJjTemp
+VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjTemp_1.5.0_11.3.0.Signal=STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjTemp_1.5.0_11.3.0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-L053R8
