Updated LCD driver to fix hardcoded values

--- a/Wayfinder/Wayfinder.ioc
+++ b/Wayfinder/Wayfinder.ioc
@@ -26,22 +26,25 @@ Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA7
-Mcu.Pin11=PB10
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PC8
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=PB8
-Mcu.Pin19=PB9
+Mcu.Pin11=PB1
+Mcu.Pin12=PB2
+Mcu.Pin13=PB10
+Mcu.Pin14=PB12
+Mcu.Pin15=PB13
+Mcu.Pin16=PB14
+Mcu.Pin17=PC8
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_RTC_VS_RTC_Activate
-Mcu.Pin21=VP_RTC_VS_RTC_Calendar
-Mcu.Pin22=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjPressTemp_5.7.0_11.3.0
-Mcu.Pin25=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjTemp_1.5.0_11.3.0
+Mcu.Pin20=PB3
+Mcu.Pin21=PB8
+Mcu.Pin22=PB9
+Mcu.Pin23=VP_RTC_VS_RTC_Activate
+Mcu.Pin24=VP_RTC_VS_RTC_Calendar
+Mcu.Pin25=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjPressTemp_5.7.0_11.3.0
+Mcu.Pin28=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjTemp_1.5.0_11.3.0
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC3
@@ -49,7 +52,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=26
+Mcu.PinsNb=29
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-MEMS1.11.3.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -91,8 +94,12 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB10.Mode=TX_Only_Simplex_Unidirect_Master
 PB10.Signal=SPI2_SCK
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Pu
 PB13.GPIO_Pu=GPIO_NOPULL
 PB13.Mode=I2C
@@ -102,6 +109,8 @@ PB14.GPIO_Pu=GPIO_NOPULL
 PB14.Locked=true
 PB14.Mode=I2C
 PB14.Signal=I2C2_SDA
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI1_SCK
 PB8.Locked=true
@@ -158,7 +167,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV16
 RCC.AHBFreq_Value=1000000
