--- a/Wayfinder/Wayfinder.ioc
+++ b/Wayfinder/Wayfinder.ioc
@@ -17,10 +17,9 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=RTC
 Mcu.IP5=SPI1
-Mcu.IP6=SPI2
-Mcu.IP7=SYS
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP6=SYS
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32L053R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -29,30 +28,28 @@ Mcu.Pin10=PA7
 Mcu.Pin11=PB1
 Mcu.Pin12=PB2
 Mcu.Pin13=PB10
-Mcu.Pin14=PB12
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PC8
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin14=PB11
+Mcu.Pin15=PB12
+Mcu.Pin16=PC8
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PB6
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB3
-Mcu.Pin21=PB8
-Mcu.Pin22=PB9
-Mcu.Pin23=VP_RTC_VS_RTC_Activate
-Mcu.Pin24=VP_RTC_VS_RTC_Calendar
-Mcu.Pin25=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjPressTemp_5.7.0_11.3.0
-Mcu.Pin28=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjTemp_1.5.0_11.3.0
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_RTC_VS_RTC_Activate
+Mcu.Pin22=VP_RTC_VS_RTC_Calendar
+Mcu.Pin23=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjPressTemp_5.7.0_11.3.0
+Mcu.Pin26=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjTemp_1.5.0_11.3.0
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PC3
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=29
+Mcu.PinsNb=27
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-MEMS1.11.3.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -86,39 +83,39 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=LD2 [Green Led]
+PA4.GPIOParameters=PinState
+PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
+PA4.Signal=GPIO_Output
 PA5.Locked=true
-PA5.Signal=GPIO_Output
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB10.Mode=TX_Only_Simplex_Unidirect_Master
-PB10.Signal=SPI2_SCK
+PB10.GPIOParameters=GPIO_Pu
+PB10.GPIO_Pu=GPIO_NOPULL
+PB10.Locked=true
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB11.GPIOParameters=GPIO_Pu
+PB11.GPIO_Pu=GPIO_NOPULL
+PB11.Locked=true
+PB11.Mode=I2C
+PB11.Signal=I2C2_SDA
 PB12.Locked=true
 PB12.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_Pu
-PB13.GPIO_Pu=GPIO_NOPULL
-PB13.Mode=I2C
-PB13.Signal=I2C2_SCL
-PB14.GPIOParameters=GPIO_Pu
-PB14.GPIO_Pu=GPIO_NOPULL
-PB14.Locked=true
-PB14.Mode=I2C
-PB14.Signal=I2C2_SDA
 PB2.Locked=true
 PB2.Signal=GPIO_Output
-PB3.Mode=Full_Duplex_Master
-PB3.Signal=SPI1_SCK
-PB8.Locked=true
-PB8.Mode=I2C
-PB8.Signal=I2C1_SCL
-PB9.Locked=true
-PB9.Mode=I2C
-PB9.Signal=I2C1_SDA
+PB6.Locked=true
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Locked=true
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC13.Locked=true
 PC13.Signal=RTC_TS
 PC14-OSC32_IN.Locked=true
@@ -127,8 +124,6 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC3.Mode=TX_Only_Simplex_Unidirect_Master
-PC3.Signal=SPI2_MOSI
 PC8.Locked=true
 PC8.Signal=GPIO_Output
 PH0-OSC_IN.Locked=true
@@ -138,7 +133,6 @@ PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
-ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -167,7 +161,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV16
 RCC.AHBFreq_Value=1000000
@@ -211,12 +205,7 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=500.0 KBits/s
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
-STMicroelectronics.X-CUBE-MEMS1.11.3.0.BSP.number=3
+STMicroelectronics.X-CUBE-MEMS1.11.3.0.BSP.number=2
 STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjPressTempJjLPS22HH=SPI
 STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjPressTemp_Checked=true
 STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjTempJjSTTS22H=I2C
@@ -242,16 +231,6 @@ STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.mode=I2C
 STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.name=STTS22H BUS IO driver
 STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.semaphore=
 STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.solution=I2C2
-STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.STBoard=false
-STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.api=BSP_BUS_DRIVER
-STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.component=
-STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.condition=SEMBoardOoPartJjPressTempJjLPS22HHJjSPI
-STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.instance=SPI1
-STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.ip=SPI
-STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.mode=Full-Duplex Master
-STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.name=LPS22HH BUS IO driver
-STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.semaphore=
-STMicroelectronics.X-CUBE-MEMS1.11.3.02.BSP.solution=SPI1
 STMicroelectronics.X-CUBE-MEMS1.11.3.0_SwParameter=BoardOoPartJjPressTempJjLPS22HH\:SPI;BoardOoPartJjTempJjSTTS22H\:I2C;
 USART2.BaudRate=62500
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
