Fixed STTS22H device address misread (temp sensing should work)

--- a/Wayfinder/Wayfinder.ioc
+++ b/Wayfinder/Wayfinder.ioc
@@ -161,7 +161,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV16
 RCC.AHBFreq_Value=1000000
@@ -205,7 +205,7 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-STMicroelectronics.X-CUBE-MEMS1.11.3.0.BSP.number=2
+STMicroelectronics.X-CUBE-MEMS1.11.3.0.BSP.number=1
 STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjPressTempJjLPS22HH=SPI
 STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjPressTemp_Checked=true
 STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjTempJjSTTS22H=I2C
@@ -221,16 +221,6 @@ STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.mode=Output
 STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.name=LPS22HH_CS
 STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.semaphore=
 STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.solution=PC8
-STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.STBoard=false
-STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.api=BSP_BUS_DRIVER
-STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.component=
-STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.condition=SEMBoardOoPartJjTempJjSTTS22HJjI2C
-STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.instance=I2C2
-STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.ip=I2C
-STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.mode=I2C
-STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.name=STTS22H BUS IO driver
-STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.semaphore=
-STMicroelectronics.X-CUBE-MEMS1.11.3.01.BSP.solution=I2C2
 STMicroelectronics.X-CUBE-MEMS1.11.3.0_SwParameter=BoardOoPartJjPressTempJjLPS22HH\:SPI;BoardOoPartJjTempJjSTTS22H\:I2C;
 USART2.BaudRate=62500
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
