--- a/Wayfinder/Wayfinder.ioc
+++ b/Wayfinder/Wayfinder.ioc
@@ -17,45 +17,55 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=RTC
 Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP6=SPI2
+Mcu.IP7=SYS
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32L053R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PB1
-Mcu.Pin12=PB2
-Mcu.Pin13=PB10
-Mcu.Pin14=PB11
-Mcu.Pin15=PB12
-Mcu.Pin16=PC8
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB6
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB1
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB12
+Mcu.Pin17=PB13
+Mcu.Pin18=PB15
+Mcu.Pin19=PC8
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB7
-Mcu.Pin21=VP_RTC_VS_RTC_Activate
-Mcu.Pin22=VP_RTC_VS_RTC_Calendar
-Mcu.Pin23=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjPressTemp_5.7.0_11.3.0
-Mcu.Pin26=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjTemp_1.5.0_11.3.0
+Mcu.Pin20=PA8
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PB3
+Mcu.Pin24=PB6
+Mcu.Pin25=PB7
+Mcu.Pin26=PB8
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_RTC_VS_RTC_Activate
+Mcu.Pin29=VP_RTC_VS_RTC_Calendar
 Mcu.Pin3=PH0-OSC_IN
+Mcu.Pin30=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjPressTemp_5.7.0_11.3.0
+Mcu.Pin33=VP_STMicroelectronics.X-CUBE-MEMS1_VS_BoardOoPartJjTemp_1.5.0_11.3.0
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA4
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=27
+Mcu.Pin5=PA0
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=34
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-MEMS1.11.3.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32L053R8Tx
 MxCube.Version=6.12.1
 MxDb.Version=DB.6.0.121
+NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -63,6 +73,11 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+PA0.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PA0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA0.GPIO_PuPd=GPIO_PULLUP
+PA0.Locked=true
+PA0.Signal=GPXTI0
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -94,6 +109,10 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_PuPd
+PA8.GPIO_PuPd=GPIO_PULLUP
+PA8.Locked=true
+PA8.Signal=GPIO_Input
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Pu
@@ -108,14 +127,33 @@ PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB13.Locked=true
+PB13.Mode=TX_Only_Simplex_Unidirect_Master
+PB13.Signal=SPI2_SCK
+PB15.Locked=true
+PB15.Mode=TX_Only_Simplex_Unidirect_Master
+PB15.Signal=SPI2_MOSI
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_PuPd
+PB3.GPIO_PuPd=GPIO_PULLUP
+PB3.Locked=true
+PB3.Signal=GPIO_Input
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PB8.GPIOParameters=GPIO_PuPd
+PB8.GPIO_PuPd=GPIO_PULLUP
+PB8.Locked=true
+PB8.Signal=GPIO_Input
+PB9.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.Locked=true
+PB9.Signal=GPXTI9
 PC13.Locked=true
 PC13.Signal=RTC_TS
 PC14-OSC32_IN.Locked=true
@@ -161,7 +199,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2C2_Init-I2C2-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV16
 RCC.AHBFreq_Value=1000000
@@ -200,27 +238,25 @@ RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
 RTC.IPParameters=WakeUpClock-WakeUp
 RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SPI1.CalculateBaudRate=500.0 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-STMicroelectronics.X-CUBE-MEMS1.11.3.0.BSP.number=1
+SPI2.CalculateBaudRate=500.0 KBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjPressTempJjLPS22HH=SPI
 STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjPressTemp_Checked=true
 STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjTempJjSTTS22H=I2C
 STMicroelectronics.X-CUBE-MEMS1.11.3.0.BoardOoPartJjTemp_Checked=true
 STMicroelectronics.X-CUBE-MEMS1.11.3.0.IPParameters=BoardOoPartJjPressTempJjLPS22HH,BoardOoPartJjTempJjSTTS22H
-STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.STBoard=false
-STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.api=Unknown
-STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.component=
-STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.condition=SEMBoardOoPartJjPressTempJjLPS22HHJjSPI
-STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.instance=PC8
-STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.ip=GPIO
-STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.mode=Output
-STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.name=LPS22HH_CS
-STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.semaphore=
-STMicroelectronics.X-CUBE-MEMS1.11.3.00.BSP.solution=PC8
 STMicroelectronics.X-CUBE-MEMS1.11.3.0_SwParameter=BoardOoPartJjPressTempJjLPS22HH\:SPI;BoardOoPartJjTempJjSTTS22H\:I2C;
 USART2.BaudRate=62500
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
