--- a/Wayfinder/Wayfinder.ioc
+++ b/Wayfinder/Wayfinder.ioc
@@ -64,6 +64,7 @@ Mcu.UserName=STM32L053R8Tx
 MxCube.Version=6.12.1
 MxDb.Version=DB.6.0.121
 NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -132,20 +133,22 @@ PB15.Mode=TX_Only_Simplex_Unidirect_Master
 PB15.Signal=SPI2_MOSI
 PB2.Locked=true
 PB2.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_PuPd
+PB3.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PB3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB3.GPIO_PuPd=GPIO_PULLUP
 PB3.Locked=true
-PB3.Signal=GPIO_Input
+PB3.Signal=GPXTI3
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PB8.GPIOParameters=GPIO_PuPd
+PB8.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PB8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB8.GPIO_PuPd=GPIO_PULLUP
 PB8.Locked=true
-PB8.Signal=GPIO_Input
+PB8.Signal=GPXTI8
 PB9.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
 PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB9.GPIO_PuPd=GPIO_PULLUP
@@ -168,6 +171,7 @@ PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -196,7 +200,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_ADC_Init-ADC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV16
 RCC.AHBFreq_Value=1000000
@@ -212,7 +216,7 @@ RCC.HSI16_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=1000000
-RCC.IPParameters=48CLKFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCClockSelection,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=48CLKFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=32768
 RCC.LPTIMFreq_Value=1000000
 RCC.LPUARTFreq_Value=1000000
@@ -221,7 +225,6 @@ RCC.MCOPinFreq_Value=16000000
 RCC.MSI_VALUE=2097000
 RCC.PLLCLKFreq_Value=24000000
 RCC.PWRFreq_Value=2097000
-RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCClockSelectionVirtual=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=4000000
@@ -237,6 +240,10 @@ RTC.IPParameters=WakeUpClock-WakeUp
 RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
 SPI1.CalculateBaudRate=500.0 KBits/s
